feat: new section

--- a/pages/style.css
+++ b/pages/style.css
@@ -32,6 +32,7 @@ a,ul, li, h1, h2, p {
     --content-color: #0D606F;
     --preview-color: #FFFFFF;
     --transparent-color: #F2785CB2; 
+    --background-color: rgba(255, 255, 255, 0.7);
 }
 
 .button {
@@ -42,6 +43,9 @@ a,ul, li, h1, h2, p {
     border-radius: 10px;
     box-shadow: 0px 2px 3px 0px rgba(13, 96, 111, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+
+
+
 
 /* временные */
 .header {
@@ -138,5 +142,31 @@ a,ul, li, h1, h2, p {
     max-width: 892px;
     border-radius: 15px;
     padding: 18px 18px 18px 40px;
-    background: rgba(255, 255, 255, 0.7);
+    background: var(--background-color);
+    display: flex;
+    justify-content: space-between;
 }
+
+.form__input {
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 40px;
+    font-family: 'Aleo', serif;
+}
+
+::placeholder {
+    font-size: 24px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 29px;
+    color: var(--header-color); 
+  } 
+
+.form__button {
+    padding: 10px 32px;
+    font: 500 24px/32px 'Red Hat Text', sans-serif;
+}
+
+
+/* SECTION STEPS */
