--- a/pages/style.css
+++ b/pages/style.css
@@ -1,7 +1,4 @@
 
-/* font-family: 'Aleo', serif;
-font-family: 'Red Hat Text', sans-serif; */
-
 *, *::before, *::after {
     box-sizing: border-box;
 }
@@ -51,7 +48,6 @@ a,ul, li, h1, h2, h3, p {
     justify-content: space-between;
     align-items: center;
     gap: 10px;
-    /* max-width: 230px; */
 }
 
 .title {
@@ -60,22 +56,6 @@ a,ul, li, h1, h2, h3, p {
     line-height: normal;
     text-align: center;
 }
-
-
-
-
-/* временные */
-.header {
-    background-color: bisque;
-}
-.header__logo-mobile {
-    display: none;
-}
-.footer {
-    background-color: bisque;
-}
-
-
 
 /* HEADER */
 
@@ -129,11 +109,10 @@ a,ul, li, h1, h2, h3, p {
 
 
 .preview {
-    /* padding: 32px 20px 256px; */
     padding: 32px 20px 220px;
     background-image: url(../assets/img/desktop/desk_preview_bg.png);
     background-repeat: no-repeat;
-    background-position: center calc(-1 * 90px);
+    background-position: center -90px;
 }
 
 .preview__conteiner {
@@ -191,10 +170,6 @@ a,ul, li, h1, h2, h3, p {
 
 .steps__title {
     padding-top: 80px;
-    /* color: var(--header-color);
-    font: 500 40px 'Red Hat Text';
-    line-height: normal;
-    text-align: center; */
 }
 
 .steps__conteiner {
@@ -254,14 +229,11 @@ a,ul, li, h1, h2, h3, p {
     gap: 10px;
 }
 
-
 input[type="radio"]{
     width: 20px;
     height: 20px;
     cursor: pointer;
-
 }
-
 
 .destinations__button {
     margin: 0 auto;
@@ -274,33 +246,30 @@ input[type="radio"]{
 /* SECTION STORIES */ 
 
 .stories__title {
-    padding-top: 80px;
+    margin-top: 80px;
+    margin-bottom: 40px;
 }
 
 .stories__gallery-bg {
-    margin-top: 40px;
     background-image: url(../assets/img/desktop/desk_stories_bg.png);
     background-repeat: no-repeat;
     background-position: center 0;
-    /* padding-bottom: 40px; */
 }
 .stories__gallery-transporent {
     background-color: var(--background-color);
-    padding-bottom: 40px;
 }
 
-.stories__gallery { 
+
+ .stories__gallery { 
     padding-top: 40px;
-    /* display: flex;
+    display: flex;
     flex-direction: column;
-    gap: 40px;  */
-}
+    gap: 30px;
+ }
 
 .gallery__card {
     display: flex;
     gap: 40px;
-    padding-bottom: 30px;
-
 }
 
 .gallery__img-deks {
@@ -310,18 +279,18 @@ input[type="radio"]{
 }
 
 .gallery__subtitle {
-    font: 400 35px/42px 'Aleo';
+    font: 400 35px 'Aleo';
     color: var(--content-color);
-    margin-bottom: 25px;
+    padding-bottom: 16px;
 }
 
 .gallery__text {
-    font: 400 20px/24px 'Aleo';
+    font: 400 20px 'Aleo';
     color: var(--content-color);
 }
 
 .gallery__link {
-    font: 400 20px/24px 'Aleo';
+    font: 400 20px 'Aleo';
     color: var(--content-color); 
     font-weight: bold;
 }
@@ -329,5 +298,35 @@ input[type="radio"]{
 .stories__button {
     margin: 0 auto;
     margin-top: 10px;
-    /* margin-bottom: 40px; */
+    margin-bottom: 40px;
+}
+
+
+/* FOOTER */
+
+.footer {
+    background-image: url(../assets/img/desktop/desk_stories_bg.png);
+    background-repeat: no-repeat;
+    background-position: center -1252px; 
+}
+
+.footer__conteiner {
+    padding: 21px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: right;
+    gap: 330px; 
+}
+
+.footer__title {
+    font: 500 16px/21px 'Red Hat Text';
+    color: var(--preview-color);
+
+}
+
+.footer__social-list {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
 }
