--- a/pages/style.css
+++ b/pages/style.css
@@ -4,8 +4,10 @@
 }
 
 html {
+    max-width: 1440px;
     scroll-behavior: smooth;
     transition: all .3s;
+    margin: 0 auto;
 }
 body {
     margin: 0 auto;
@@ -22,6 +24,10 @@ a,ul, li, h1, h2, h3, p {
     padding: 0;
     margin: 0;
 
+}
+
+img {
+    max-width: 100%;
 }
 
 :root {
@@ -70,6 +76,8 @@ a,ul, li, h1, h2, h3, p {
     z-index: 10;
     background: var(--transparent-color);
     box-shadow: 0px 4px 4px rgba(13, 96, 111, 0.5);
+    max-width: 1440px;
+    margin: 0 auto;
 }
 .header__wrapper{
     padding: 25px 0px; 
@@ -201,17 +209,22 @@ a,ul, li, h1, h2, h3, p {
     display: flex; 
     flex-direction: column;
     align-items: center;
+    position: relative;
+    overflow: hidden;
 }
 
 .destinations__banner {
+    position: relative;
     display: flex;
-    flex-direction: row;
-    gap: 60px; 
+    justify-content: space-between;
+    width: 175%;
+
 }
 
-.banner__content {
+/* .banner__content {
     position: relative;
-}
+    
+} */
 
 .banner__subtitle {
     position: absolute;
@@ -221,6 +234,16 @@ a,ul, li, h1, h2, h3, p {
     color: var(--preview-color);
 
 }
+
+.banner__img-desk {
+    border-radius: 16px;
+    object-fit: contain;
+}
+
+
+
+
+
 
 .destinations__carousel {
     padding-top: 25px;
